** New Features and Improvements:
- New: integrated c-eldoc.  In C buffers, the ``<f12> ? e`` key sequence
  toggles c-eldoc mode on/off. I am currently investigating c-eldoc various
  versions trying to improve its performances.  For systems that do not have
  access to a LSP for C/C++ c-eldoc might provide some help even though it is
  limited.
- New: Added key bindings for ag-based search.
** Modifications:
- Modified key bindings in pel:grep to better organize commands for ag and for
  better regularity.
** Updates to Reference PDF files:
- Grep PDF describes ag and ripgrep menu.  Also references projectile-based
  search commands.
* Version 0.3.1
** Fixes:
  - Spell check control user options and handling now simpler and don't have type
    mismatch that prevent customization buffer to edit the values.
** New Features and improvements:
  - New: In Emacs Lisp mode: new key binding for eldoc-mode: <f12> e
  - New: eldoc-box now available in graphics mode when pel-use-eldoc-box is
    set to *t*. Two new keys in the <f12> for Emacs Lisp mode:
    - <f12> b : eldoc-box-hover-at-point
    - <f12> B : eldoc-box-hover-mode
  - New: user option pel-windmove-on-esc-cursor controls whether PEL binds the
    Esc-cursor keys to windmove commands. It is on by default. Users of
    Org-mode will probably want to turn it off.
** Modifications:
  - Change: vlang-mode.el repo was renamed to vlang-mode.  Updated download
    control code accordingly.
* Version 0.3.0
- This includes slots of cleanups, several new modes, new key
  bindings, better installation procedure, several bug fixes.  I continue to
  consider it a project in early development but only because it's lacking a
  lot of features I'd like to integrate for software development in several
  programming languages.  I am using it continuously though on Emacs 26.3 on
  macOS Mojave and tested on some other platforms:
  - Linux Fedora 32 with Emacs 27.1
  - Linux Mint 20 with Emacs 26.3